--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -74,8 +74,8 @@
         "sidebar_label": "CRU18 担保"
       },
       "aresBasic": {
-        "title": "科普",
-        "sidebar_label": "科普"
+        "title": "延伸",
+        "sidebar_label": "延伸"
       },
       "liquidity": {
         "title": "流动性挖矿",
