--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -257,7 +257,7 @@
       "Node": "节点",
       "Stake Mining": "质押挖矿",
       "Slot Auction": "插槽竞拍",
-      "Basic": "基础",
+      "Supplementary": "基础",
       "Gladios Guide": "Gladios指南"
     }
   },
