--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -77,6 +77,10 @@
         "title": "Run Node",
         "sidebar_label": "Run Node"
       },
+      "runValidatorNode": {
+        "title": "Run Validator Node",
+        "sidebar_label": "Run Validator Node"
+      },
       "setOnlineIdentity": {
         "title": "Set Online Identity",
         "sidebar_label": "Set Online Identity"
@@ -104,10 +108,6 @@
       "trojanStaking": {
         "title": "Trojan",
         "sidebar_label": "Trojan Stake Mining"
-      },
-      "verifyingRunValidatorNode": {
-        "title": "Verify & Run Validator Nodes",
-        "sidebar_label": "Verify & Run Validator Nodes"
       },
       "WarehouseApi": {
         "title": "Warehouse Api",
