add run validator node Q&A section

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -77,6 +77,10 @@
         "title": "Run Node",
         "sidebar_label": "Run Node"
       },
+      "runValidatorNodeQAndA": {
+        "title": "Run Validator Node Q&A",
+        "sidebar_label": "Run Validator Node Q&A"
+      },
       "runValidatorNode": {
         "title": "Run Validator Node",
         "sidebar_label": "Run Validator Node"
