--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -308,7 +308,8 @@
       "Stake Mining": "质押挖矿",
       "Slot Auction": "插槽竞拍",
       "Supplementary": "基础",
-      "Gladios Guide": "Gladios指南"
+      "Gladios Guide": "Gladios指南",
+      "PreNode": "预备节点"
     }
   },
   "pages-strings": {
