modify category name

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -184,7 +184,7 @@
       "Learn": "Learn",
       "Build": "Build",
       "Node": "Node",
-      "PreNode": "PreNode"
+      "Prep Network": "Prep Network"
     }
   },
   "pages-strings": {
