--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -324,7 +324,7 @@
       "Slot Auction": "插槽竞拍",
       "Supplementary": "基础",
       "Gladios Guide": "Gladios指南",
-      "PreNode": "预备节点",
+      "Prep Network": "预备网络",
       "Create Odyssey Account & Staking": "创建Odyssey账户&质押"
     }
   },
